# gc-project-xevious

./: .gitignore  ProjectDescription.docx
xevious/: CMakeLists.txt  Entity.h  Makefile  boss_entity.cpp  boss_entity.h  boundingBoxDebug.frag  boundingBoxDebug.vert  bounding_box.cpp  bounding_box.h  bullet_entity.cpp  bullet_entity.h  camera.h  enemy_entity.cpp  enemy_entity.h  entity.cpp  entity.h  grid.cpp  grid.h  main.cpp  mesh_simplification.cpp  mesh_simplification.h  models.cpp  models.h  player_entity.cpp  player_entity.h  sample_entity.cpp  sample_entity.h  shader.frag  shader.vert  terrain_generator.cpp  terrain_generator.h  utils.cpp  utils.h  xevious.project  xevious.workspace
xevious/.codelite/: xevious.session
xevious/resources/: beam1.ppm  beam2.ppm
xevious/shaders/: boundingBoxDebug.frag  boundingBoxDebug.vert  box_shader.frag  box_shader.vert  shader.frag  shader.vert  shadow.frag  shadow.vert
